--- a/Petalos/Areas/Admin/Views/Admin/AgregarFlor.cshtml
+++ b/Petalos/Areas/Admin/Views/Admin/AgregarFlor.cshtml
@@ -25,7 +25,7 @@
 <div id="popErrores" class="popup" runat="server">
     <div>
         <h1>Ha ocurrido un error:  @Html.ValidationSummary()</h1>
-        <p id="mensajeError"></p>
+        <p id="mensajeError">Errors</p>
         <input type="button" value="Aceptar" />
     </div>
 </div>
