--- a/Petalos/Areas/Admin/Views/Admin/AgregarImagenes.cshtml
+++ b/Petalos/Areas/Admin/Views/Admin/AgregarImagenes.cshtml
@@ -1,16 +1,20 @@
 ﻿@model Petalos.Areas.Admin.Models.FloresViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment env
 @{
     Layout = "_Layout";
 }
 
 <h2 class="titulo">Agregar imagenes a una flor</h2>
 
-<form method="post" action="~/Admin/AgregarImagenes">
-    <input type="hidden" asp-for="imagenesflores.Idflor"/>
+<form method="post" action="~/Admin/AgregarImagenes" enctype="multipart/form-data">
+    <input hidden asp-for="imagenesflores.Nombreimagen" type="text" value="prueba" />
+    <select hidden required asp-for="imagenesflores.Idflor" asp-items="@(new SelectList(Model.df, "Idflor", "Nombre"))">
+        <option selected>@Model.Datosflores.Idflor</option>
+    </select>
     <label>Flor:</label>
-    <input type="text" readonly="readonly" value="@Model.imagenesflores.Idflor" asp-for="imagenesflores.IdflorNavigation.Nombre" /><br />
-    <label>Archivo:</label><input type="file" /><br />
+    <input type="text" readonly="readonly" value="@Model.Datosflores.Nombre" /><br />
+    <label>Archivo:</label><input type="file" name="imagen1" accept="image/jpeg" /><br />
 
     <input type="submit" value="Agregar" />
     <a href="~/Admin">
@@ -21,18 +25,20 @@
 
 <div class="listaImagenes">
     <ul>
-        @foreach (var item in Model.df)
+
+
+        @foreach (var item in Model.Datosflores.Imagenesflores)
         {
             <li>
-                <img src='~/images/@(item.Idflor)' />
-                <a href="#">Eliminar</a>
+                <img src='~/images/@item.Nombreimagen' />
+                <a href="~/Admin/AgregarImagenes/@item.Idimagen/EliminarImagen">Eliminar</a>
             </li>
         }
 
 
     </ul>
 </div>
-
+<p> @Html.ValidationSummary() </p>
 <div id="popErrores" class="popup" runat="server">
     <div>
         <h1>Ha ocurrido un error:</h1>
@@ -50,6 +56,4 @@
         <input type="button" value="No" />
     </div>
 </div>
-
-
 
