--- a/Petalos/Areas/Admin/Views/Admin/EditarFlor.cshtml
+++ b/Petalos/Areas/Admin/Views/Admin/EditarFlor.cshtml
@@ -22,7 +22,7 @@
         <input type="button" value="Cancelar" />
     </a>
 </form>
-
+<p> @Html.ValidationSummary() </p>
 <div id="popErrores" class="popup" runat="server">
     <div>
         <h1>Ha ocurrido un error:</h1>
